--- a/paper/presentation/custom.css
+++ b/paper/presentation/custom.css
@@ -7,7 +7,7 @@
 }
 
 li {
-    text-align:justify;
+    text-align:left;
     margin: 3% 0 !important;
 }
 
@@ -20,3 +20,7 @@ td > p {
     margin: 0 !important;
 }
 
+#refs > div > p {
+    text-align: justify;
+    font-size: 50%;
+}
